objects/TW1_Consulta_de_Loja_Inexistente__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Loja_Inexistentes__c</fullName>
        <label>Loja Inexistentes</label>
        <referenceTo>TW1_Loja_Inexistentes__c</referenceTo>
        <relationshipLabel>Consultas de Lojas Inexistentes</relationshipLabel>
        <relationshipName>Consultas_de_Lojas_Inexistentes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Noma_da_Loja__c</fullName>
        <label>Noma da Loja</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Consultas de Lojas Inexistentes</relationshipLabel>
        <relationshipName>Consultas_de_Lojas_Inexistentes</relationshipName>
        <type>Lookup</type>
    </fields>

    <label>Consulta de Loja Inexistente</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Consulta de Loja Inexistente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultas de Lojas Inexistentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>